--- a/README
+++ b/README
@@ -6,6 +6,7 @@ This will set you up with Linux 5.15.19
 # md5sum:
 69da5f94ae1f98417e27f6e5f7b24a6f  kernel-5.15.19-debs.tar
 
+These debs are compressed with zstd so install "zstd" before installing the debs
 https://drive.google.com/file/d/1Ah5YPvESeDm-G5t9nRA88wGkiJWZj_mm/view?usp=sharing
 
 # If you desire to compile your own kernel
