--- a/README
+++ b/README
@@ -1,20 +1,20 @@
 Updatelee's repository based off of V4L media_tree and powARman's saa716x work.
 
-This will set you up with Linux 5.15.19
+This will set you up with Linux 5.15.23
 
 # Pre-built kernel debs (tarball) for Debian based OS's can be found here:
 # md5sum:
-69da5f94ae1f98417e27f6e5f7b24a6f  kernel-5.15.19-debs.tar
+ecdfdca96d02755f1325722cdacfe5b8  kernel-5.15.23-debs.tar
 
-These debs are compressed with zstd so install "zstd" before installing the debs
-https://drive.google.com/file/d/1Ah5YPvESeDm-G5t9nRA88wGkiJWZj_mm/view?usp=sharing
+# These debs are compressed with zstd so install "zstd" before installing the debs
+https://drive.google.com/file/d/1rSC4Zy0ZzkIjeNCAgv-zGAge_i9_NQxw/view?usp=sharing
 
 # If you desire to compile your own kernel
-# install any dependancies that you might need
+# install any dependancies that you might need:
 
 	sudo apt-get install git build-essential ncurses-dev \
 	libproc-processtable-perl fakeroot libelf-dev libssl-dev \
-	bison flex pigz pkg-config bc
+	bison flex pigz pkg-config bc zstd
 
 # Option 1: clone the full repository (@1.9Gb)
 
